# casca

./: .gitignore  LICENSE  README.ar.md  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh-Hans.md  casca.spec  com.oliverhub.Casca.yml  install.sh  io.github.oliverhubtech-source.Casca.yml  io.github.oliverhubtech_source.Casca.yml  pyproject.toml  python3-requirements.yaml  run.py  run_environment.py  run_package.py  run_webview.py
.github/workflows/: deb.yml  release.yml  snap.yml
casca/: browsers.py  catalog_strings.py  devices.py  entries.py  environment_launcher.py  fileutils.py  headerbar_css.py  help_content.py  i18n.py  icons.py  main.py  package_launcher.py  presets.py  profiles.py  social_icons.py  store.py  updater.py  webview_app.py  window.py
casca/data/: com.oliverhub.Casca.desktop  com.oliverhub.Casca.desktop.in  com.oliverhub.Casca.metainfo.xml  help.html  help_template.html  io.github.oliverhubtech-source.Casca.desktop  io.github.oliverhubtech-source.Casca.desktop.in  io.github.oliverhubtech-source.Casca.metainfo.xml  io.github.oliverhubtech_source.Casca.desktop  io.github.oliverhubtech_source.Casca.desktop.in  (+2 more)
debian/: changelog  control  copyright  rules
flathub/: io.github.oliverhubtech_source.Casca.yml  python3-requirements.yaml
po/: ar.po  bn.po  casca.pot  compile-mo.sh  de.po  es.po  fr.po  hi.po  id.po  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ru.po  th.po  tr.po  uk.po  vi.po  zh_Hans.po
snap/: snapcraft.yaml
(+20 files in other folders)
