[project]
name = "casca"
version = "1.2.0"
description = "Turns any website into a native GNOME app"
readme = "README.md"
license = "MIT"
authors = [
    { name = "OliverHub" },
]
urls = { Homepage = "https://github.com/oliverhubtech-source/casca" }
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.50",
    "requests>=2.31,<3",
    "Pillow>=11,<13",
]

# System dependencies (not pip-installable — must come from the distro's package
# manager). Versions below are the ones tested in this project:
#   gtk4            >= 4.14   (used: 4.22.4)
#   libadwaita      >= 1.5    (used: 1.9.2)
#   webkitgtk6.0    >= 2.44   (used: 2.52.4, optional — falls back to external browsers without it)
#   gobject-introspection

[tool.setuptools]
packages = ["casca"]
